# assignment-5

./: .gitignore  CMakeLists.txt  README.md  output.txt
assignment5/: CandidateVotes.cpp  CandidateVotes.hpp  Election.cpp  Election.hpp  Election.test.cpp  ElectionQueue.cpp  ElectionQueue.hpp  ballot.cpp  ballot.hpp  ballot.test.cpp  main.cpp
scripts/: download_data.sh
